* Fixed a bug where all modal content would become selected when clicked inside the modal dialog * Fixed the pagination view on mobile

--- a/src/styles/tink/_pagination.scss
+++ b/src/styles/tink/_pagination.scss
@@ -65,6 +65,28 @@
       color: $pagination-link-active-color;
       cursor: default;
     }
+
+    /**
+     * Hide some stuff on mobile
+     */
+    @include mq($screen-md, "max") {
+      display: none;
+
+      &.prev,
+      &.next,
+      &.active {
+        display: block;
+      }
+    }
+
+    @include mq($screen-sm, "max") {
+      &.prev,
+      &.next {
+        span {
+          display: none;
+        }
+      }
+    }
   }
 
   .prev:before,
